syntax = "proto3";

package rivet.backend.team;

import "proto/common.proto";
import "proto/backend/user.proto";
import "proto/backend/upload.proto";

message Team {
	reserved 5, 8;

	rivet.common.Uuid team_id = 1;
	rivet.common.Uuid owner_user_id = 2;
	string display_name = 3;
	string bio = 4;
	optional rivet.common.Uuid profile_upload_id = 9;
	optional string profile_file_name = 10;
	optional upload.Provider profile_provider = 11;
	int64 create_ts = 6;
	Publicity publicity = 7;
}

enum Publicity {
	OPEN = 0;
	CLOSED = 1;
}

message DevTeam {
	reserved 3, 4, 6, 7;

	enum DevStatus {
		SETUP_INCOMPLETE = 0;
		ACTIVE = 1;
		PAYMENT_FAILED = 2;
		SPENDING_LIMIT_REACHED = 3;
	}

	rivet.common.Uuid team_id = 1;
	int64 create_ts = 8;
	DevStatus status = 5;
	bool active = 9;
	optional int64 setup_complete_ts = 10;
	optional int64 payment_failed_ts = 11;
	optional int64 spending_limit_reached_ts = 12;

	optional string stripe_customer_id = 2;
}
